# manga-reader

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: main.rs
