[package]
name = "manga_reader"
version = "0.1.7"
edition = "2021"

[dependencies]
eframe = "0.31.1"
image = "0.25.6"
zip = "3.0.0"
walkdir = "2.5.0"
anyhow = "1.0.98"
rfd = "0.15.3"
env_logger = "0.11.8"

[build-dependencies]
winres = "0.1.12"

[package.metadata.bundle]
name = "Manga Reader"
identifier = "com.teerapath.mangareader"
icon = ["resources/icon.png"]
resources = ["resources"]
copyright = "© 2025 Teerapath Sattabongkot"
category = "Developer Tool"
short_description = "A manga and comic reader application"
long_description = "A manga and comic reader application that supports various image formats and comic book archives."